# CPP_Code_Guider

./: .gitignore  README.md  test
base_cpp_knowledge/: learn_memory.cpp  test
beautiful_code_preview/DoubleBuffer/: lock_free_double_buffer.hpp  (+1 more)
get_to_know_pointer/: loop_reference_demo.cpp
get_to_know_thread/: callback_and _thread.cpp  callback_and_thread.cpp  notify_thread.cpp  producer_consumer_mutex_cond.cpp  thread_print_ABC.cpp  thread_print_ABC2.cpp  use_async_create_mission.cpp  use_condition_variable_control_thread.cpp  use_future_promise_control_thread.cpp
gtest_practice/: CMakeLists.txt  calculator.h  test_calculator.cpp
mark_leetcode/: 1.两数之和.cpp  10.正则表达式匹配.cpp  1094.拼车.cpp  11.盛最多水的容器.cpp  12.整数转罗马数字.cpp  13.罗马数字转整数.cpp  14.最长公共前缀.cpp  15.三数之和.cpp  16.最接近的三数之和.cpp  160.相交链表.cpp  17.电话号码的字母组合.cpp  18.四数之和.cpp  19.删除链表的倒数第-n-个结点.cpp  20.有效的括号.cpp  21.合并两个有序链表.cpp  22.括号生成.cpp  23.合并-k-个升序链表.cpp  24.两两交换链表中的节点.cpp  25.k-个一组翻转链表.cpp  26.删除有序数组中的重复项.cpp  27.移除元素.cpp  28.找出字符串中第一个匹配项的下标.cpp  29.两数相除.cpp  3.无重复字符的最长子串.cpp  31.下一个排列.cpp  32.最长有效括号.cpp  33.搜索旋转排序数组.cpp  34.在排序数组中查找元素的第一个和最后一个位置.cpp  39.组合总和.cpp  4.寻找两个正序数组的中位数.cpp  42.接雨水.cpp  46.全排列.cpp  48.旋转图像.cpp  49.字母异位词分组.cpp  5.最长回文子串.cpp  50.pow-x-n.cpp  51.n-皇后.cpp  53.最大子数组和.cpp  55.跳跃游戏.cpp  56.合并区间.cpp  (+19 more)
test_loan_data/: borrowed_object_smart_ptr.cpp  test
untamed/: KMP.cpp  RAII_help_you_clean.cpp  asan_leak.cpp  base_derived_construction_destroy_timing.cpp  char_and_string.cpp  check_the_file_exist.cpp  demo_check_free_malloc.cpp  demo_member_construction_destroy_timing.cpp  friend_method.cpp  print_enumClass.cpp  print_refrence.cpp  review_ptr_use.cpp  vector_resize_many_times.cpp
untamed/demo_cross_dll_singleton/: CMakeLists.txt
untamed/demo_cross_dll_singleton/bad/: plugin_bad.cpp  singleton_bad.h
untamed/demo_cross_dll_singleton/good/: app_good.cpp  core_good.cpp  plugin_good.cpp
(+18 files in other folders)
